# audiotranscriber

./: .gitignore  Makefile  README.md  app.py  enrich.py  notebook.ipynb  pyproject.toml  recorder.py  transcribe.py  utils.py
.streamlit/: config.toml
