[project]
name = "audiotranscriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openai>=1.75.0",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "pycld2>=0.42",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.14.2",
    "streamlit>=1.44.1",
]
